--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "prefixer",
-  "version": "1.0.0",
+  "name": "cssprefixer",
+  "version": "1.0.1",
   "description": "The GUI of autoprefix adder. Use by postcss autoprefixer plugins and electron.",
   "main": "main.js",
+  "scripts": {
+    "start": "electron .",
+    "build": "electron-packager ./ Prefixer --version=0.35.4 --platform=darwin --arch=x64 --ignore=node_modules/electron-* --ignore=node_modules/.bin --ignore=.git --icon=./app/app-icon.icns"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/targetkiller/Prefixer"
@@ -17,10 +21,15 @@
   "dependencies": {
     "gulp": "~3.9.0",
     "gulp-postcss": "~6.0.1",
-    "autoprefixer": "~6.1.2"
+    "gulp-rename": "^1.2.2",
+    "autoprefixer": "~6.1.2",
+    "electron-prebuilt": "^0.35.0"
   },
   "bugs": {
     "url": "https://github.com/targetkiller/Prefixer/issues"
   },
-  "homepage": "https://github.com/targetkiller/Prefixer#readme"
+  "homepage": "https://github.com/targetkiller/Prefixer#readme",
+  "devDependencies": {
+    "electron-packager": "^5.1.1"
+  }
 }
