--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "electron"
   ],
   "author": "tqtan",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "gulp": "~3.9.0",
     "gulp-postcss": "~6.0.1",
